--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8"> 
   <!-- make the website responsive with viewport -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <title>Message for you</title> 
+  <title>Ask out your crush</title> 
   <style>
     *
 {
