--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8"> 
   <!-- make the website responsive with viewport -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <title>Ask out your crush</title> 
+  <title>Message to Recruiters</title> 
   <style>
     *
 {
@@ -18,7 +18,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: rgb(247, 25, 177);
+    background: rgb(71, 99, 239);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -50,24 +50,24 @@ button {
     outline: none;
     cursor: pointer;
     box-shadow: 0 2px 4px rgb(3, 3, 3);
-    border: 2px solid #e94d58;
+    border: 2px solid #2a17bd;
     font-size: 1.2em;
 }
 button:nth-child(1) {
     margin-left: -200px;
-    background: #a70867;
+    background: #2a08a7;
 }
 button:nth-child(2) {
     margin-right: -200px;
     background: white;
-    color: #e94d58;
+    color: #1f0795;
 }
   </style>
  </head> 
  <body> 
   <div class="wrapper"> 
-   <h2 class="question">Hey, Do you like me?</h2> 
-   <img class="gif" alt="gif" src="anim1.webp"> 
+   <h2 class="question">Can I please get that internship?</h2> 
+   <img class="gif" alt="gif" src="please.webp"> 
    <div class="option_button"> <button class="Yes">Yes</button> <button class="No">No</button> 
    </div> 
   </div> 
@@ -79,9 +79,9 @@ const yes = document.querySelector(".Yes");
 const no = document.querySelector(".No");
 
 yes.addEventListener("click", () => {
-  question.innerHTML = "Awwwwh, I like you too...";
+  question.innerHTML = "Thank you, I'm ready to code now!!!";
   gif.src =
-    "anim2.webp";
+    "working.webp";
 });
 
 no.addEventListener("mouseover", () => {
