--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ button:nth-child(2) {
  <body> 
   <div class="wrapper"> 
    <h2 class="question">Can I please get that internship?</h2> 
-   <img class="gif" alt="gif" src="please.webp"> 
+   <img class="gif" alt="gif" src="https://github.com/AdibaAdi/MessageForRecruiters/blob/main/please.webp"> 
    <div class="option_button"> <button class="Yes">Yes</button> <button class="No">No</button> 
    </div> 
   </div> 
