--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@ button:nth-child(2) {
  <body> 
   <div class="wrapper"> 
    <h2 class="question">Can I please get that internship?</h2> 
-   <img class="gif" alt="gif" src="https://github.com/AdibaAdi/MessageForRecruiters/blob/main/please.webp"> 
+   <img class="gif" alt="gif" src="https://raw.githubusercontent.com/AdibaAdi/MessageForRecruiters/main/please.webp
+"> 
    <div class="option_button"> <button class="Yes">Yes</button> <button class="No">No</button> 
    </div> 
   </div> 
@@ -81,7 +82,7 @@ const no = document.querySelector(".No");
 yes.addEventListener("click", () => {
   question.innerHTML = "Thank you, I'm ready to code now!!!";
   gif.src =
-    "https://github.com/AdibaAdi/MessageForRecruiters/blob/main/working.webp";
+    "https://raw.githubusercontent.com/AdibaAdi/MessageForRecruiters/main/working.webp";
 });
 
 no.addEventListener("mouseover", () => {
