--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ button:nth-child(2) {
  </head> 
  <body> 
   <div class="wrapper"> 
-   <h2 class="question">Can I please get that internship?</h2> 
+   <h2 class="question">Can I please get that job?</h2> 
    <img class="gif" alt="gif" src="https://raw.githubusercontent.com/AdibaAdi/MessageForRecruiters/main/please.webp
 "> 
    <div class="option_button"> <button class="Yes">Yes</button> <button class="No">No</button> 
